@@ -4,44 +4,44 @@ import java.io.BufferedInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
 import java.nio.channels.FileChannel;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Enumeration;
-import java.util.HashMap;
-import java.util.Iterator;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
-import javax.servlet.http.Cookie;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
+import cms.dto.PageIndex;
+import cms.dto.user.UserAuthorization;
+import jakarta.servlet.http.Cookie;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 
 import org.apache.commons.lang3.StringUtils;
+import org.apache.commons.lang3.Strings;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-import org.queryString.util.MultiMap;
-import org.queryString.util.UrlEncoded;
+import org.eclipse.jetty.util.MultiMap;
+import org.eclipse.jetty.util.UrlEncoded;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
+import org.springframework.http.ResponseCookie;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.servlet.mvc.method.annotation.StreamingResponseBody;
 import org.springframework.web.util.UriComponents;
 import org.springframework.web.util.UriComponentsBuilder;
 
-import cms.bean.user.UserAuthorization;
-import cms.web.taglib.Configuration;
+
+
 
 
 /**
- * 
+ * Web工具
  * @author Administrator
  *
  */
@@ -49,59 +49,136 @@ public class WebUtil {
 	private static final Logger logger = LogManager.getLogger(WebUtil.class);
 	
 	//String regexp  = "((http[s]{0,1}|ftp)://[a-zA-Z0-9\\.\\-]+\\.([a-zA-Z]{2,4})(:\\d+)?(/[a-zA-Z0-9\\.\\-~!@#$%^&*+?:_/=<>]*)?)|(www.[a-zA-Z0-9\\.\\-]+\\.([a-zA-Z]{2,4})(:\\d+)?(/[a-zA-Z0-9\\.\\-~!@#$%^&*+?:_/=<>]*)?)"; // 结束条件
-	private static Pattern pattern = Pattern.compile("((http[s]{0,1})://[a-zA-Z0-9\\.\\-]+\\.([a-zA-Z]{2,4})(:\\d+)?(/[a-zA-Z0-9\\.\\-~!@#$%^&*+?:_/=<>]*)?)|(www.[a-zA-Z0-9\\.\\-]+\\.([a-zA-Z]{2,4})(:\\d+)?(/[a-zA-Z0-9\\.\\-~!@#$%^&*+?:_/=<>]*)?)", Pattern.CASE_INSENSITIVE);
-	
+	private static final Pattern pattern = Pattern.compile("((http[s]{0,1})://[a-zA-Z0-9\\.\\-]+\\.([a-zA-Z]{2,4})(:\\d+)?(/[a-zA-Z0-9\\.\\-~!@#$%^&*+?:_/=<>]*)?)|(www.[a-zA-Z0-9\\.\\-]+\\.([a-zA-Z]{2,4})(:\\d+)?(/[a-zA-Z0-9\\.\\-~!@#$%^&*+?:_/=<>]*)?)", Pattern.CASE_INSENSITIVE);
+		
 	/**默认Cookie有效期30*24*60*60  单位/秒  **/
 	public static int cookieMaxAge = 30*24*60*60;
-	
-	
-	/**
+
+
+    //虚拟路径
+    private static String path = "";
+
+
+    /**
+     * 获取网站URL
+     * @param request 请求信息
+     * @return
+     */
+    public static String getUrl(HttpServletRequest request) {
+        String port = "";
+        if(request.getServerPort() != 80 && request.getServerPort() !=443){
+            port = ":"+request.getServerPort();
+
+        }
+
+
+        return request.getScheme()+"://"+request.getServerName()+port+request.getContextPath()+"/";
+    }
+
+    /**
+     * 获取网站虚拟路径
+     * @return
+     */
+    public static String getPath() {
+        return path;
+    }
+    /**
+     * 由cms.web.filter.TempletesInterceptor方法设置参数
+     * /api
+     * @param _path 虚拟路径
+     */
+    public static synchronized void setPath(String _path) {
+        path = _path;
+    }
+
+    /**
+     * 将文本用UTF8格式解码
+     * @param text 文本
+     * @return
+     */
+    public static String decode(String text) {
+        return URLDecoder.decode(text, StandardCharsets.UTF_8 );
+    }
+
+    /**
+     * 截取资源标识
+     * @param uri 统一资源标识符
+     * @param path 虚拟路径
+     * @return
+     */
+    public static String baseURI(String uri,String path){
+        if(uri != null && !uri.isEmpty()){
+            if(path != null && !path.isEmpty()){
+                if(uri.length() > path.length() && uri.startsWith(path)){
+                    uri = uri.substring(path.length());
+                }
+            }
+            //删除左斜杆
+            if(uri.startsWith("/")){
+                uri = uri.substring(1);
+            }
+            return uri;
+        }
+        return "";
+    }
+
+
+
+
+    /**
      * 添加cookie
-     * @param request
-     * @param response
+     * @param request 请求信息
+     * @param response 响应信息
      * @param name cookie的名称
      * @param value cookie的值
      * @param maxAge cookie存放的时间(以秒为单位,假如存放三天,即3*24*60*60; 如果值为0,cookie将随浏览器关闭而清除)
      */
     public static void addCookie(HttpServletRequest request,HttpServletResponse response, String name, String value, int maxAge) {
-    	addCookie(request,response,name,value,maxAge,true);
+    	if(value != null && !value.trim().isEmpty()){
+
+            value = URLEncoder.encode(value,StandardCharsets.UTF_8 );
+            Cookie cookie = new Cookie(name, value);
+            //  cookie.setHttpOnly(httpOnly);
+            cookie.setPath("/");//根目录下的所有程序都可以访问cookie
+            if (maxAge>0) cookie.setMaxAge(maxAge);
+
+            cookie.setSecure(Strings.CI.startsWith(request.getScheme(), "https") || request.isSecure());
+
+
+            response.addCookie(cookie);
+    	}
+    	
+
     }
     /**
      * 添加cookie
-     * @param request
-     * @param response
+     * @param request 请求信息
+     * @param response 响应信息
      * @param name cookie的名称
      * @param value cookie的值
      * @param maxAge cookie存放的时间(以秒为单位,假如存放三天,即3*24*60*60; 如果值为0,cookie将随浏览器关闭而清除)
      * @param httpOnly 标记是否对Cookie使用 HttpOnly 标志。如果设置为true，客户端的 JavaScript 将无法访问Cookie
      */
     public static void addCookie(HttpServletRequest request,HttpServletResponse response, String name, String value, int maxAge,boolean httpOnly) {
+ 
+    	//https://web.dev/same-site-same-origin/
+    	//同站不设置sameSite参数仍然可以跨域。例如 test.com:3000和test.com:8080
     	
-    	if(value != null && !"".equals(value.trim())){
-    		try {
-    			value = URLEncoder.encode(value,"utf-8");
-    		} catch (UnsupportedEncodingException e) {
-    			// TODO Auto-generated catch block
-    		//	e.printStackTrace();
-    			if (logger.isErrorEnabled()) {
-    	            logger.error("添加cookie错误",e);
-    	        }
-    		}
-    	}
+    	final ResponseCookie responseCookie = ResponseCookie
+    	        .from(name, value)
+    	      //  .secure(true)//是否只在 HTTPS协议发送的请求才允许Cookie传输给服务端
+    	        .httpOnly(httpOnly)
+    	        .path("/")
+    	        .maxAge(maxAge>0 ? maxAge : -1)//负值表示没有“Max-Age”属性
+    	        .secure(Strings.CI.startsWith(request.getScheme(), "https") || request.isSecure())
+    	     //   .sameSite("None")//Strict：严格模式，必须同站请求才能发送cookie。 Lax：(relax缩写)宽松模式，安全的跨站请求可以发送cookie。 None：显示地禁止SameSite限制，必须配合Secure一起使用
+    	        .build();
     	
-        Cookie cookie = new Cookie(name, value);
-        cookie.setHttpOnly(httpOnly);
-        cookie.setPath("/");//根目录下的所有程序都可以访问cookie
-        if (maxAge>0) cookie.setMaxAge(maxAge);
-        
-        cookie.setSecure(StringUtils.startsWithIgnoreCase(request.getScheme(), "https") || request.isSecure());
-        
-        response.addCookie(cookie); ; 
+    	response.addHeader(HttpHeaders.SET_COOKIE, responseCookie.toString());
     }
-    
     /**
      * 获取cookie的存活时间
-     * @param request
+     * @param request 请求信息
      * @param name cookie的名称
      * @return
      */
@@ -117,7 +194,7 @@ public class WebUtil {
     
     /**
      * 获取cookie的值
-     * @param request
+     * @param request 请求信息
      * @param name cookie的名称
      * @return
      */
@@ -126,20 +203,11 @@ public class WebUtil {
         if(cookieMap.containsKey(name)){//如果存在cookie键的名称
             Cookie cookie = (Cookie)cookieMap.get(name);//取得cookie
             String value = cookie.getValue();//返回cookie的值
-            if(value != null && !"".equals(value.trim())){
-            	try {
-            		return URLDecoder.decode(value,"utf-8");
-				} catch (UnsupportedEncodingException e) {
-					// TODO Auto-generated catch block
-				//	e.printStackTrace();
-					if (logger.isErrorEnabled()) {
-			            logger.error("获取cookie的值错误",e);
-			        }
-				}
+            if(value != null && !value.trim().isEmpty()){
+
+                return URLDecoder.decode(value,StandardCharsets.UTF_8);
+
             }
-            
-            
-            
             return value;
         }else{
             return null;
@@ -156,16 +224,8 @@ public class WebUtil {
             for (int i = 0; i < cookies.length; i++) {//循环所有Cookie
             	if(name.equals(cookies[i].getName())){
             		String value = cookies[i].getValue();
-                    if(value != null && !"".equals(value.trim())){
-                    	try {
-                    		return  URLDecoder.decode(value,"utf-8");
-        				} catch (UnsupportedEncodingException e) {
-        					// TODO Auto-generated catch block
-        				//	e.printStackTrace();
-        					if (logger.isErrorEnabled()) {
-        			            logger.error("获取cookie的值错误",e);
-        			        }
-        				}
+                    if(value != null && !value.trim().isEmpty()){
+                        return  URLDecoder.decode(value,StandardCharsets.UTF_8);
                     }
                     return value;
             	//	return cookies[i].getValue();
@@ -211,23 +271,24 @@ public class WebUtil {
 	 * 本方法封装了往前台设置的header,contentType等信息
 	 * @param message	需要传给前台的数据
 	 * @param type		指定传给前台的数据格式,如"html","json"等
-	 * @param response	HttpServletResponse对象
+	 * @param response	响应信息
 	 * @throws IOException
 	 */
 	public static void writeToWeb(String message, String type, HttpServletResponse response) throws IOException{
 		response.setHeader("Pragma", "No-cache");
 		response.setHeader("Cache-Control", "no-cache");
 		response.setDateHeader("Expires", 0); 
-		response.setContentType("text/" + type +"; charset=utf-8");
+		response.setContentType("application/" + type +"; charset=utf-8");
 		response.getWriter().write(message);
 		response.getWriter().close();
 
 		
 	}
+
 	
 	/**
 	 * 提交数据方式
-	 * @param request HttpServletRequest对象
+	 * @param request 请求信息
 	 * @return true: Ajax方式  false: Form表单提交方式
 	 */
 	public static boolean submitDataMode(HttpServletRequest request){
@@ -235,43 +296,35 @@ public class WebUtil {
 		//读取报文
 		String requestType = request.getHeader("X-Requested-With");  
 	
-		if(requestType != null && !"".equals(requestType.trim())){//重复添加时会有多个值
-			String requestType_arr[] =  requestType.split(",");
-			if(requestType_arr != null && requestType_arr.length >0){
-				for(String value : requestType_arr){
-					if(value != null && "XMLHttpRequest".equalsIgnoreCase(value.trim())){
-						isAjax = true;
-						break;
-					}
-				}
-			}
+		if(requestType != null && !requestType.trim().isEmpty()){//重复添加时会有多个值
+			String[] requestType_arr =  requestType.split(",");
+            for(String value : requestType_arr){
+                if(value != null && "XMLHttpRequest".equalsIgnoreCase(value.trim())){
+                    return true;
+                }
+            }
 		}
-		
-		
-		//判断是否ajax方式提交
-	//	if(requestType != null && "XMLHttpRequest".equals(requestType)){
-	//		isAjax = true;
-	//	}
-		
 		return isAjax;
 	}
 	
-	
+	/**
+	 * 向页面输出数据
+	 * @param body 字节
+	 * @param fileName 文件名称
+	 * @param request 响应信息
+	 * @return
+	 */
 	public static ResponseEntity<byte[]> downloadResponse(byte[] body, String fileName, HttpServletRequest request) {
 
         String header = request.getHeader("User-Agent").toUpperCase();
         HttpStatus status = HttpStatus.CREATED;
-        try {
-        	//一般来说下载文件是使用201状态码的，但是IE浏览器不支持
-            if (header.contains("MSIE") || header.contains("TRIDENT") || header.contains("EDGE")) {
-                fileName = URLEncoder.encode(fileName, "UTF-8");
-                fileName = fileName.replace("+", "%20");    // IE下载文件名空格变+号问题
-                status = HttpStatus.OK;
-            }
-        } catch (UnsupportedEncodingException e) {
-        	if (logger.isErrorEnabled()) {
-	            logger.error("转换IE系列浏览器方法错误",e);
-	        }
+        
+
+        //一般来说下载文件是使用201状态码的，但是IE浏览器不支持    手机UC浏览器要设置status = HttpStatus.OK;下载m3u8文件才正常
+        if (header.contains("MSIE") || header.contains("TRIDENT") || header.contains("EDGE") || header.contains("UCBROWSER")) {
+            fileName = URLEncoder.encode(fileName, StandardCharsets.UTF_8 );
+            fileName = fileName.replace("+", "%20");    // IE下载文件名空格变+号问题
+            status = HttpStatus.OK;
         }
 
         HttpHeaders headers = new HttpHeaders();
@@ -287,24 +340,23 @@ public class WebUtil {
 	 * 断点续传流式下载 适合大文件(以流的形式向页面输出数据)
 	 * @param physicalPath 完整路径(路径+文件名称)
 	 * @param fileName 文件名称
-	 * @param request
+	 * @param request 响应信息
 	 * @return
 	*/
 	public static ResponseEntity<StreamingResponseBody> rangeDownloadResponse(String physicalPath, String fileName,String rangeHeader, HttpServletRequest request,HttpServletResponse response) {
 		
 		Path filePath = Paths.get(physicalPath);
 		
-        Long fileLength = 0L;
-        try {
-        	fileLength = FileChannel.open(filePath).size();
+        long fileLength = 0L;
+        try (FileChannel fileChannel = FileChannel.open(filePath)) {
+            fileLength = fileChannel.size();
         } catch (IOException e) {
-			// TODO Auto-generated catch block
-			e.printStackTrace();
-			if (logger.isErrorEnabled()) {
-		          logger.error("读取文件长度错误"+physicalPath,e);
-		    }
-			return ResponseEntity.badRequest().build();
-		}
+            if (logger.isErrorEnabled()) {
+                logger.error("读取文件长度错误"+physicalPath,e);
+            }
+            return ResponseEntity.badRequest().build();
+        }
+
         
         long rangeStart = 0L;
         long rangeEnd = fileLength;
@@ -335,9 +387,7 @@ public class WebUtil {
 	                int readCount = 0;
 	                while ((readCount = bufferedInputStream.read(bytes)) != -1) {
 	                    if (readSum + readCount > contentLength) {
-	                    	if(contentLength - readSum >=0L){
-	                    		outputStream.write(bytes, 0, (int) (contentLength - readSum));
-	                    	}
+	                        outputStream.write(bytes, 0, (int) (contentLength - readSum));
 	                    } else {
 	                        outputStream.write(bytes, 0, readCount);
 	                    }
@@ -351,27 +401,20 @@ public class WebUtil {
 	    };
 	   
 	    String header = request.getHeader("User-Agent").toUpperCase();
-	    try {
-        	//一般来说下载文件是使用201状态码的，但是IE浏览器不支持    手机UC浏览器要设置status = HttpStatus.OK;下载m3u8文件才正常
-            if (header.contains("MSIE") || header.contains("TRIDENT") || header.contains("EDGE") || header.contains("UCBROWSER")) {
-                fileName = URLEncoder.encode(fileName, "UTF-8");
-                fileName = fileName.replace("+", "%20");    // IE下载文件名空格变+号问题
-            }
-        } catch (UnsupportedEncodingException e) {
-        	if (logger.isErrorEnabled()) {
-	            logger.error("转换IE系列浏览器方法错误",e);
-	        }
+
+        //一般来说下载文件是使用201状态码的，但是IE浏览器不支持    手机UC浏览器要设置status = HttpStatus.OK;下载m3u8文件才正常
+        if (header.contains("MSIE") || header.contains("TRIDENT") || header.contains("EDGE") || header.contains("UCBROWSER")) {
+            fileName = URLEncoder.encode(fileName, StandardCharsets.UTF_8);
+            fileName = fileName.replace("+", "%20");    // IE下载文件名空格变+号问题
         }
-	    
- 
-	    
+
 	    HttpHeaders headers = new HttpHeaders();
 	    headers.setContentType(MediaType.APPLICATION_OCTET_STREAM);
 	    headers.setContentDispositionFormData("attachment", fileName);
-	    headers.setContentLength(fileLength);  
-	    headers.add("Accept-Ranges","bytes");
-	    headers.add("Content-Range", "bytes " + rangeStart + "-" + (rangeEnd - 1) + "/" + fileLength);
-	    if(rangeHeader != null){
+        headers.setContentLength(contentLength);
+        headers.add("Accept-Ranges","bytes");
+        headers.add("Content-Range", "bytes " + rangeStart + "-" + (rangeEnd - 1) + "/" + fileLength);
+        if(rangeHeader != null){
 	    	 return new ResponseEntity<StreamingResponseBody>(streamingResponseBody, headers, HttpStatus.PARTIAL_CONTENT);// HttpStatus.PARTIAL_CONTENT: 206
 	    }else{
 	    	return new ResponseEntity<StreamingResponseBody>(streamingResponseBody, headers, HttpStatus.OK);
@@ -401,90 +444,83 @@ public class WebUtil {
 
 	/**
 	 * 是否为微信浏览器
-	 * @param request
+	 * @param request 请求信息
 	 * @return
 	 */
 	public static boolean isWeChatBrowser(HttpServletRequest request){
 		String userAgent = request.getHeader("user-agent").toLowerCase();
-		if(userAgent != null && !"".equals(userAgent.trim()) && userAgent.indexOf("micromessenger")>-1){
+		if(!userAgent.trim().isEmpty() && userAgent.indexOf("micromessenger")>-1){
 			return true;
 		}
 		return false;
 	}
-	
-	/**
-	 * URI参数编码
-	 * @param uri
-	 * @return
-	 */
-	public static String parameterEncoded(String uri){
-		//截取到等于第二个参数的字符串为止,从左往右
-		String uri_before = StringUtils.substringBefore(uri, "?");
-		
-		//从左往右查到相等的字符开始，保留后边的，不包含等于的字符
-		String queryString = StringUtils.substringAfter(uri, "?");
 
-		//组装URL参数
-		StringBuffer url_parameter = new StringBuffer("");
-		//参数进行URL编码
-		if(queryString != null && !"".equals(queryString)){
-       		MultiMap<String> values = new MultiMap<String>();  
-	       	UrlEncoded.decodeTo(queryString, values, "UTF-8");
-	       	Iterator iter = values.entrySet().iterator();  
-	       	while(iter.hasNext()){  
-	       		Map.Entry e = (Map.Entry)iter.next();  
-	       		if(e.getValue() != null){
-	       			if(e.getValue() instanceof List){
-	       				List<String> valueList = (List)e.getValue();
-		       			if(valueList.size() >0){	
-		       				for(String value :valueList){
-		       					if(value != null && !"".equals(value.trim())){  					
-		       						try {
-										url_parameter.append("&"+e.getKey()+"="+URLEncoder.encode(value,"utf-8"));
-									} catch (UnsupportedEncodingException e1) {
-										// TODO Auto-generated catch block
-										if (logger.isErrorEnabled()) {
-											logger.error("将Url参数编码错误",e1);
-								        }
-									}
-		       					}
-		       				}
-			       			
-			       		}
-		       		}else{	
-		       			if(e.getValue() instanceof String){      				
-		       				String value = e.getValue().toString().trim();
-	       					if(value != null && !"".equals(value)){
-	       						try {
-	       							url_parameter.append("&"+e.getKey()+"="+URLEncoder.encode(value,"utf-8"));
-	       						} catch (UnsupportedEncodingException e1) {
-									// TODO Auto-generated catch block
-	       							if (logger.isErrorEnabled()) {
-	       					            logger.error("将Url参数编码错误",e1);
-	       					        }
-								}
-			       			}	
-		       			}
-		       		}		
-	       		}
-	         	
-	       	   
 
-	       	} 
-       	}
-		String new_url_parameter = "";
-		if(url_parameter.length() >1){
-			new_url_parameter = "?";
-			//删除第一个&
-			new_url_parameter += StringUtils.difference("&", url_parameter.toString());
-		}
-		return uri_before+new_url_parameter;
-		
-	}
-	
-	/**
-	 * 获取Header中的访问令牌
-	 */
+    /**
+     * URI参数编码
+     * @param uri
+     * @return
+     */
+    public static String parameterEncoded(String uri){
+        //截取到等于第二个参数的字符串为止,从左往右
+        String uri_before = StringUtils.substringBefore(uri, "?");
+
+        //从左往右查到相等的字符开始，保留后边的，不包含等于的字符
+        String queryString = StringUtils.substringAfter(uri, "?");
+
+        //组装URL参数
+        StringBuffer url_parameter = new StringBuffer("");
+        //参数进行URL编码
+        if(queryString != null && !queryString.trim().isEmpty()){
+            MultiMap<String> values = new MultiMap<String>();
+            UrlEncoded.decodeTo(queryString, values, StandardCharsets.UTF_8);
+            Iterator iter = values.entrySet().iterator();
+            while(iter.hasNext()){
+                Map.Entry e = (Map.Entry)iter.next();
+                if(e.getValue() != null){
+                    if(e.getValue() instanceof List){
+                        List<String> valueList = (List)e.getValue();
+                        if(valueList.size() >0){
+                            for(String value :valueList){
+                                if(value != null && !value.trim().isEmpty()){
+
+                                    url_parameter.append("&"+e.getKey()+"="+URLEncoder.encode(value, StandardCharsets.UTF_8));
+
+                                }
+                            }
+
+                        }
+                    }else{
+                        if(e.getValue() instanceof String){
+                            String value = e.getValue().toString().trim();
+                            if(!value.isEmpty()){
+                                url_parameter.append("&"+e.getKey()+"="+URLEncoder.encode(value, StandardCharsets.UTF_8));
+
+                            }
+                        }
+                    }
+                }
+
+
+
+            }
+        }
+        String new_url_parameter = "";
+        if(url_parameter.length() >1){
+            new_url_parameter = "?";
+            //删除第一个&
+            new_url_parameter += StringUtils.difference("&", url_parameter.toString());
+        }
+        return uri_before+new_url_parameter;
+
+    }
+
+
+    /**
+     * 获取Header中的访问令牌
+     * @param request 请求信息
+     * @return
+     */
 	public static UserAuthorization getAuthorization(HttpServletRequest request){
 		//从Header获取
 		Enumeration<String> headers = request.getHeaders("Authorization");
@@ -493,24 +529,25 @@ public class WebUtil {
 			String mark = "Bearer";
 			if ((value.toLowerCase().startsWith(mark.toLowerCase()))) {
 				String authHeaderValue = value.substring(mark.length()).trim();
-				if(authHeaderValue != null && !"".equals(authHeaderValue)){
-					String tokenArray[] = authHeaderValue.split(",");
-					if(tokenArray != null && tokenArray.length ==2){
-						return new UserAuthorization(tokenArray[0].trim(),tokenArray[1].trim());	
+				if(!authHeaderValue.isEmpty()){
+					String[] tokenArray = authHeaderValue.split(",");
+					if(tokenArray.length ==2){
+						return new UserAuthorization(tokenArray[0].trim(),tokenArray[1].trim());
 					}
 				}
 			}
 		}
 		return null;
 	}
-	
-	/**
-	 * 获取Referer中的域名
-	 */
+
+    /**
+     * 获取Referer中的域名
+     * @param request 请求信息
+     * @return
+     */
 	public static String getRefererDomain(HttpServletRequest request){
 		String referer = request.getHeader("referer");
-		String domain = "";
-		if(referer != null && !"".equals(referer.trim())){
+		if(referer != null && !referer.trim().isEmpty()){
 			UriComponents refererComponent = UriComponentsBuilder.fromUriString(referer).build();
 			
 			//域名 http://localhost:3000/
@@ -520,18 +557,20 @@ public class WebUtil {
 			        .port(refererComponent.getPort())
 			        .path("/")
 			        .build();
-			domain = domainComponent.toUriString();
+            return domainComponent.toUriString();
 		}
-		return domain;
+		return "";
 	}
-	
-	/**
-	 * 获取Origin中的域名
-	 */
+
+    /**
+     * 获取Origin中的域名
+     * @param request 请求信息
+     * @return
+     */
 	public static String getOriginDomain(HttpServletRequest request){
 		String origin = request.getHeader("Origin");
 		String domain = "";
-		if(origin != null && !"".equals(origin.trim())){
+		if(origin != null && !origin.trim().isEmpty()){
 			UriComponents refererComponent = UriComponentsBuilder.fromUriString(origin).build();
 			
 			//域名 http://localhost:3000/
@@ -545,4 +584,41 @@ public class WebUtil {
 		}
 		return domain;
 	}
+	
+	/**
+	 * 获取前端地址
+	 * @param request 请求信息
+	 * @return
+	 */
+	public static String domain(HttpServletRequest request){  
+		String domain = getOriginDomain(request);
+		if(domain == null || domain.trim().isEmpty()){
+			domain = getUrl(request);
+		}
+		
+		return domain;
+	}
+
+    /**
+     *
+     * @param viewpagecount 页码显示总数
+     * @param currenPage 当前页
+     * @param totalpage 总页数
+     * @return
+     */
+    public static PageIndex getPageIndex(long viewpagecount, int currenPage, long totalpage){
+        long startpage = currenPage-(viewpagecount%2==0? viewpagecount/2-1 : viewpagecount/2);
+        long endpage = currenPage+viewpagecount/2;
+        if(startpage<1){
+            startpage = 1;
+            if(totalpage>=viewpagecount) endpage = viewpagecount;
+            else endpage = totalpage;
+        }
+        if(endpage>totalpage){
+            endpage = totalpage;
+            if((endpage-viewpagecount)>0) startpage = endpage-viewpagecount+1;
+            else startpage = 1;
+        }
+        return new PageIndex(startpage, endpage);
+    }
 }
